                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2016-06-16
 * Added privileged_params() to Wing::DB::Result.
 * Added check_privilege option to wing_field in Wing::Role::Result::Field.
 * The above two changes allow the creation of special privilege checks on a per-field basis. 

2016-06-11
 * Added Wing::Role::Result::Warnings to give a standardized way of creating warnings in classes.
 * Change a couple fields that shouldn't be not null in the User role.

2016-06-06
 * Moved environment setup into various OS specific readme files.

2016-06-03
 * Added WING_NO_EMAIL environment variable to skip sending email all together.
 * Added wait_on_wingman() and cleanup_wait_on_wingman() to Wing::TestHelper. 
 * Wing::TestHelper automatically recovers from a bad cleanup of the Andy test user.

2016-05-30
 * A few changes and bug fixes for better testing.

2016-05-24
 * If a field is defined as required or unique then we no longer allow empty string '' as a valid value.

2016-05-10
 * Added a --force option to wing class --add so that you don't accidentally overwrite your classes.
 * Added documentation for undocumented features of wing.angular.js.

2016-05-05
 * Upgraded to latest angular and angular-ui.

2016-04-28
 * Added "on_all_done" option for the .all() method in objectListManager in wing.angular.js.

2016-04-18
 * Changed the default path for the fastmmap cache so projects don't trounce on each other's cache.

2016-04-14
 * Added { join_type => 'left' } on parent relationships that are not required, which will allow prefetches and joins where the object doesn't exist.
 * You can now specify _include_related_objects=relationshipname and pull back only the objects you want, not all related objects.

2016-03-30