@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2016-06-18
+ * Added Wing::Role::Result::Cousin, which sets up many to many relationships between classes in a Wing way.
+
 2016-06-16
  * Added privileged_params() to Wing::DB::Result.
  * Added check_privilege option to wing_field in Wing::Role::Result::Field.
